fixed overflow while hover on last mainword element by deleted scale property in MyWordsElem.scss

--- a/src/App/comps/Dashboard/MyWords/MyWordsElem/MyWordsElem.scss
+++ b/src/App/comps/Dashboard/MyWords/MyWordsElem/MyWordsElem.scss
@@ -37,8 +37,8 @@
       transition: 0.2s all ease;
 
       &:hover {
-        color: rgb(228, 63, 206);
-        transform: scale(1.2);
+        color: rgb(245, 0, 184);
+        transform: scale(1, 1.1);
       }
 
     }
